--- a/package.json
+++ b/package.json
@@ -81,13 +81,14 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@hashgraph/sdk": "^2.49.2",
     "@prisma/client": "^4.7.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/nodemailer": "^6.4.7",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
